# pelican-to-sqlite

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  contributing.md  justfile  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
docs/: index.md  requirements.txt
pelican/plugins/pelican_to_sqlite/: __init__.py  _version.py  pelican_to_sqlite.py  test_pelican_to_sqlite.py
pelican_to_sqlite/: cli.py  settings.py
tests/: test_pelican_to_sqlite.py
