[project]
name = "pelican-to-sqlite"
version = "0.6.0"
description = "CLI tool for loading local pelican markdown files into a SQLite database"
readme = "README.md"
authors = [{name = "Ryan Cheley"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta"
]
dependencies = [
    "sqlite-utils",
    "click",
    "html2text",
    "pelican"
]


[project.urls]
Issues = "https://github.com/ryancheley/pelican-to-sqlite/issues"
CI = "https://github.com/ryancheley/pelican-to-sqlite/actions"
Changelog = "https://github.com/ryancheley/pelican-to-sqlite/releases"


[project.optional-dependencies]
test = [
    "pytest",
]

[tool.black]
line-length = 130
target-version = ['py39']
include = '\.pyi?$'
exclude = '(venv)'
