[project]
name = "pelican-to-sqlite"
version = "0.6.0"
description = "A Pelican Plugin for outputting your Pelican posts into a SQLite Database"
readme = "README.md"
authors = [{name = "Ryan Cheley"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta"
]
dependencies = [
    "sqlite-utils",
    "click",
    "html2text",
    "pelican"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Issues = "https://github.com/ryancheley/pelican-to-sqlite/issues"
CI = "https://github.com/ryancheley/pelican-to-sqlite/actions"
Changelog = "https://github.com/ryancheley/pelican-to-sqlite/releases"


[project.optional-dependencies]
test = [
    "pytest",
]

[tool.black]
line-length = 130
target-version = ['py39']
include = '\.pyi?$'
exclude = '(venv)'
